--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gatsby-starter-hello-world",
   "private": true,
   "description": "A simplified bare-bones starter for Gatsby",
-  "homepage": "https://klynnyang.github.io/portfolio-dev",
+  "homepage": "https://klynnyang.github.io/portfolio",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
